sort.basic.selection.AlgSelectionSort.scala.error
Erreur de compilation :
AlgSelectionSort:8: error: '(' expected but identifier found.
      if getValue(i)<ppe{
         ^AlgSelectionSort:11: error: illegal start of simple expression
    }
    ^