sort.basic.selection.AlgSelectionSort.scala.code
def selectionSort() {
  var n=getValueCount()
  for(j<-1 to n){
    var ppe=getValue(j)
    var indice_ppe=j
    for(i<-1 to n){
      if getValue(i)<ppe{
        indice_ppe=i
      }
    }
    copy(indice_ppe,j)
  }
}